<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Ap_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Ac_text"
        app:layout_constraintTop_toBottomOf="@+id/Wp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Ac_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Ac_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Ac_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Ac_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wr_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Wp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Wr_text"
        app:layout_constraintTop_toBottomOf="@+id/Op_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Wr_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Wr_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Wr_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Wr_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Og_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Op_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Og_text"
        app:layout_constraintTop_toBottomOf="@+id/Np_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Og_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Og_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Og_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Og_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ng_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Np_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Ng_text"
        app:layout_constraintTop_toBottomOf="@+id/Sp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Ng_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Ng_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Ng_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Ng_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sg_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Sg_text"
        app:layout_constraintTop_toBottomOf="@+id/Cp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sg_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Sg_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Sg_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Sg_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cg_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Cp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Cg_text"
        app:layout_constraintTop_toBottomOf="@+id/Hp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Cg_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Cg_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Cg_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Cg_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hg_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Hp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Hg_text"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Hg_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Hg_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Hg_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:text="@string/Hg_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="356dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/Title"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:capitalize="none"
        android:text="@string/SubmitBtnText"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vc_text" />

    <TextView
        android:id="@+id/Qg_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Qg_text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ac_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Qg_layout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/Qg_text"
        app:layout_constraintTop_toBottomOf="@+id/Ap_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Qg_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Qg_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Vc_text"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Vc_text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Qg_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Vc_InputLayout"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/Vc_text"
        app:layout_constraintTop_toBottomOf="@+id/Qg_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Vc_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Vc_Input"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="725dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>